# aias-opener

./: Cargo.toml  Makefile  README.md
parameters/: blinded_signature.txt  cipher.txt  distributed_key.txt  fair_blind_signature.txt  invalid_data.json  shares.txt  sk1.txt  sk2.txt  sk3.txt
src/: main.rs
