[package]
name = "aias-opener"
version = "0.1.0"
authors = ["kino-ma <kino.ma.ms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
distributed-rsa = { git = "https://github.com/project-aias/distributed-rsa", rev="f8b52b6" }
aias-core = { git = "https://github.com/project-aias/aias-core.git" }
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature" }
rand = "0.7.3"